--- a/project.html
+++ b/project.html
@@ -30,6 +30,7 @@
 <h2>Therapy On Demand; Scan Meow For A Kitten Smooch😻. </h2>
 <h3>
      Your Click Supports Our Kittens And Unlocks Your Happy Felines.
-</h3> </div>
+</h3> 
+<h4>Cats = Pure Joy</h4></div>
 </body>
 </html>
