Add main tag to project.html

--- a/project.html
+++ b/project.html
@@ -21,10 +21,11 @@
     </style>
 </head>
 <body>
-    
+    <main>
     <img 
     src="https://i.pinimg.com/1200x/76/de/14/76de14fbcbee89f541b1a3815813c6a5.jpg"
     alt="QR code for cat smooches"/>
+        </main>
     <div>
 <h1><em> Purr-fect Pick-Me-Up</em></h1>
 <h2>Therapy On Demand; Scan Meow For A Kitten Smooch😻. </h2>
