--- a/project.html
+++ b/project.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat shelter</title>
     <style>
-        img{
-            display: block;
-            border-radius:65px;
-            padding: 17px;
-            margin: auto;
-            width: 450px;
-            
-        }
-        div{
-            font-size: 25px;
-            color: darkslategrey;
-            text-align: center;
-        }
+      img {
+        display: block;
+        border-radius: 65px;
+        padding: 17px;
+        margin: auto;
+        width: 450px;
+      }
+      div {
+        font-size: 25px;
+        color: darkslategrey;
+        text-align: center;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <main>
-    <img 
-    src="https://i.pinimg.com/1200x/76/de/14/76de14fbcbee89f541b1a3815813c6a5.jpg"
-    alt="QR code for cat smooches"/>
-        </main>
+      <img
+        src="https://i.pinimg.com/1200x/76/de/14/76de14fbcbee89f541b1a3815813c6a5.jpg"
+        alt="QR code for cat smooches"
+      />
+    </main>
     <div>
-<h1><em> Purr-fect Pick-Me-Up</em></h1>
-<h2>Therapy On Demand; Scan Meow For A Kitten Smooch😻. </h2>
-<h3>
-     Your Click Supports Our Kittens And Unlocks Your Happy Felines.
-</h3> 
-<h4>Cats = Pure Joy</h4></div>
-</body>
+      <h1><em> Purr-fect Pick-Me-Up</em></h1>
+      <h2>Therapy On Demand; Scan Meow For A Kitten Smooch😻.</h2>
+      <h3>Your Click Supports Our Kittens And Unlocks Your Happy Felines.</h3>
+      <h4>Cats = Pure Joy</h4>
+    </div>
+  </body>
 </html>
